# viralvibes

./: .coveragerc  .gitignore  .pre-commit-config.yaml  .vercelignore  ADMIN_SETUP.md  Dockerfile  README.md  STRIPE_SETUP.md  auth.py  charts.py  charts_py.html  class_index.html  cli.py  components.py  constants.py  constants_py.html  db.py  db_lists.py  db_lists_py.html  db_py.html  fly-entrypoint.sh  fly.toml  function_index.html  generate_sitemap.py  index.html  kaggle_worker.py  kaggle_worker_py.html  main.py  main_py.html  pyproject.toml  remix.py  render.yaml  requirements-backend.txt  requirements.txt  run_worker.py  run_worker_py.html  secrets_loader.py  secrets_loader_py.html  status.json  step_components.py  (+92 more)
.github/: dependabot.yml
.github/workflows/: ci.yml  coverage-badge.yml  creator-bootstrap-weekly.yml  creator-bootstrap.yml  creator-worker.yml  deployment-size-check.yml  pre-commit.yml  snyk.yml  synk.yml  tests.yml  worker.yml
auth/: auth_service.py  token_revocation.py
components/: __init__.py  auth_components.py  auth_dropdown.py  base.py  buttons.py  cards.py  category_stats.py  editors_shortlist.py  errors.py  modals.py  navigation.py  page_layout.py  processing_tips.py  sections.py  seo.py  steps.py  tables.py
controllers/: __init__.py  auth_routes.py  dashboard.py  job_progress.py  preview.py
css/: main.css
db/: README.md
db/migrations/: 001_add_growth_tracking_columns.sql  002_lists_page_rpc_functions.sql  003_shared_stats_rpc_update.sql  004_fix_category_url_normalization.sql  005_backfill_growth_deltas.sql  006_category_box_stats.sql  007_add_creator_sync_indexes.sql  008_scale_for_1M.sql  009_materialized_views_hero_stats.sql  010_fix_concurrent_refresh.sql  011_fix_refresh_hero_stats_timeout.sql  012_fix_refresh_split_rpcs.sql  013_fix_total_categories_remaining.sql  014_drop_total_categories_from_mv_lists_meta.sql  (+43 more)
diagrams/: viralvibes_flyer.html  worker-flowchart.md
docs/: creator-search-review.md
js/: index.js  reveal.js
public/: robots.txt  sitemap.xml
routes/: about.py  admin.py  analysis.py  contact.py  creators.py  dashboard.py  homepage.py  legal.py  lists.py  mentions.py  outreach.py  press.py  pricing.py  stripe_checkout.py  stripe_webhooks.py
scripts/: backfill_contact_signals.py  cli.py  debug_admin.py  generate_sitemap.py  lists_video_gen.py  manage_admins.py  seed_creators.py  test_migration_007.py  validate_backfill_fix.py  verify_python_version.py  verify_sitemap.py  youtubers.csv
services/: channel_utils.py  config.py  contact_extractor.py  creator_metrics.py  creator_service.py  data_utils.py  mentions.py  outreach.py  outreach_lists.py  plan_gate.py  playlist_loader.py  rankings.py  schema_detector.py  sitemap.py  stripe_service.py  validators.py  youtube_backend_api.py  youtube_backend_base.py  youtube_backend_ytdlp.py  youtube_config.py  youtube_errors.py  youtube_service.py  youtube_transforms.py  youtube_utils.py
tests/: __init__.py  conftest.py  test_admin_outreach_export.py  test_auth_conversion.py  test_category_detail.py  test_creator_add.py  test_creator_outliers.py  test_creator_profile.py  test_endpoints.py  test_favourites.py  test_lists_category_endpoints.py  test_mentions.py  test_multi_creator_seeding.py  test_outreach.py  test_rankings.py  test_sitemap.py  test_stripe_checkout.py  test_worker.py  test_worker_progress.py  test_worker_unit.py  test_youtube_service.py  test_youtube_service_backends.py  verify_contact_extractor.py
utils/: __init__.py  analytics.py  async_utils.py  blueprint.py  core.py  creator_metrics.py  dashboard.py  dataframe.py  dates.py  formatting.py
views/: admin.py  blueprint.py  compare.py  creators.py  dashboard.py  favourites.py  job_progress.py  job_progress_state.py  lists.py  mentions.py  my_dashboards.py  outreach.py  preview.py  table.py
worker/: __init__.py  bootstrap_creators.py  creator_worker.py  jobs.py  render_worker.py  run_one_job.py  seed_jobs.py  worker.py
(+6 files in other folders)
